--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ product }}</h1>
-      <p>Tootekirjeldus: {{ productDescription }}</p>
+      <div class="nav-bar">
+      </div>
+      <div class="product-display">
+        <div class="product-container">
+          <div class="product-image">
+
+            <!--attribute binding-->
+            <img v-bind:src="image">
+          </div>
+          <div class="product-info">
+            <h1>{{ product }}</h1>
+            <a v-bind:href="url">Sokid</a>
+          </div>
+          <div>
+            <p>Tootekirjeldus: {{ productDescription }}</p>
+          </div>
+         
+        </div>
+      </div>
     </div>
 
     <!-- Import Js -->
