--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
     <script src="./components/ProductDetails.js"></script>
 
+    <script src="./components/ReviewForm.js"></script>
+
+    <script src="./components/ReviewList.js"></script>
+
     <!--Mount app-->
     <script>
       const mountedApp = app.mount('#app')
